# POSsemka

./: README.md
DownloadManager/: CMakeLists.txt  FTP_Client.cpp  FTP_Client.h  FTP_Code.h  FTP_Connect.cpp  FTP_Connect.h  FTP_Exception.h  FTP_Klient.cpp  FTP_Klient.h  FTP_Server.cpp  FTP_Server.h  FTP_Spojenie.cpp  FTP_Spojenie.h  Manager.cpp  Manager.h  VlaknoObj.cpp  VlaknoObj.h  main.cpp  main.h
